--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
 
                 <FrameLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="64dp"
                     android:layout_weight="1">
 
                     <LinearLayout
@@ -43,7 +43,6 @@
                             android:fontFamily="@font/poppins_bold"
                             android:gravity="center"
                             android:text="@string/username"
-                            android:textAllCaps="true"
                             android:textSize="16sp" />
 
                         <LinearLayout
@@ -101,7 +100,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginEnd="16dp"
-                        android:indeterminate="true" />
+                        android:indeterminate="true"
+                        tools:visibility="gone" />
 
                 </FrameLayout>
 
