--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -204,64 +204,68 @@
                 </LinearLayout>
             </FrameLayout>
 
-            <nl.joery.animatedbottombar.AnimatedBottomBar
-                android:id="@+id/mediaAnimeTab"
-                android:layout_width="fill_parent"
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/mediaTab"
+                android:layout_width="match_parent"
                 android:layout_height="64dp"
-
-                android:paddingStart="32dp"
-
-                android:paddingEnd="32dp"
+                android:background="@color/nav_bg"
                 android:visibility="gone"
-                app:abb_animationDuration="300"
-                app:abb_animationInterpolator="@anim/over_shoot"
-                app:abb_badgeBackgroundColor="#F44336"
-                app:abb_indicatorColor="?attr/colorSecondary"
-                app:abb_indicatorLocation="bottom"
-                app:abb_indicatorMargin="28dp"
-                app:abb_selectedTabType="text"
-                app:abb_tabColor="@color/nav_tab"
-                app:abb_tabColorDisabled="@color/nav_tab_disabled"
-                app:abb_tabColorSelected="?attr/colorPrimary"
-                app:abb_tabs="@menu/anime_detail_menu"
-                app:abb_textAppearance="@style/NavBarText"
+                app:tabIconTint="@color/tab_layout_icon"
+                app:tabIndicatorColor="?attr/colorSecondary"
+                app:tabInlineLabel="true"
+                app:tabTextAppearance="@style/NavBarText"
+                app:tabTextColor="@color/tab_layout_text"
                 tools:ignore="SpeakableTextPresentCheck"
-                tools:visibility="visible" />
+                tools:visibility="visible">
 
-            <nl.joery.animatedbottombar.AnimatedBottomBar
-                android:id="@+id/mediaMangaTab"
-                android:layout_width="fill_parent"
-                android:layout_height="64dp"
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:icon="@drawable/ic_round_info_24"
+                    android:text="@string/info" />
 
-                android:paddingStart="32dp"
-
-                android:paddingEnd="32dp"
-                android:visibility="gone"
-                app:abb_animationDuration="300"
-                app:abb_animationInterpolator="@anim/over_shoot"
-                app:abb_badgeBackgroundColor="#F44336"
-                app:abb_indicatorColor="?attr/colorSecondary"
-                app:abb_indicatorLocation="bottom"
-                app:abb_indicatorMargin="28dp"
-                app:abb_selectedTabType="text"
-                app:abb_tabColor="@color/nav_tab"
-                app:abb_tabColorDisabled="@color/nav_tab_disabled"
-                app:abb_tabColorSelected="?attr/colorPrimary"
-                app:abb_tabs="@menu/manga_detail_menu"
-                app:abb_textAppearance="@style/NavBarText"
-                tools:ignore="SpeakableTextPresentCheck" />
+            </com.google.android.material.tabs.TabLayout>
 
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/mediaViewPager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:ignore="SpeakableTextPresentCheck" >
-    </androidx.viewpager2.widget.ViewPager2>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/mediaCountdownContainer"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:layout_marginBottom="-16dp"
+            android:visibility="gone"
+            app:cardBackgroundColor="?attr/colorPrimary"
+            app:cardCornerRadius="0dp"
+            tools:visibility="visible">
+
+            <TextView
+                android:id="@+id/mediaCountdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:fontFamily="@font/poppins_bold"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                android:textColor="?attr/colorOnPrimary"
+                tools:text="Next Episode will be released in \n00:00:00" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/mediaViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:nestedScrollingEnabled="false"
+            tools:ignore="SpeakableTextPresentCheck" />
+    </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mediaClose"
