--- a/app/src/main/res/layout/bottom_sheet_selector.xml
+++ b/app/src/main/res/layout/bottom_sheet_selector.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/selectorContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:backgroundTintMode="src_atop"
     android:orientation="vertical"
     android:paddingBottom="10dp">
