- Added Fillers Viewing for Zoro - Removed Image Compression, now wasting people's internet, kitsu fucking us over - Slightly fixed navigation for media info

--- a/app/src/main/res/layout/item_episode_compact.xml
+++ b/app/src/main/res/layout/item_episode_compact.xml
@@ -6,6 +6,12 @@
     android:layout_margin="8dp"
     app:cardCornerRadius="16dp">
 
+    <View
+        android:id="@+id/itemEpisodeFillerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/filler"
+        android:visibility="gone" />
     <TextView
         android:id="@+id/itemEpisodeNumber"
         android:layout_width="wrap_content"
