--- a/app/src/main/res/layout/item_episode_list.xml
+++ b/app/src/main/res/layout/item_episode_list.xml
@@ -6,8 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:backgroundTintMode="src_atop"
     android:longClickable="true"
     app:cardCornerRadius="16dp">
+
+    <View
+        android:id="@+id/itemEpisodeFillerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/filler"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,8 +53,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_marginStart="-12dp"
-                    android:layout_marginBottom="-20dp"
+                    android:layout_marginStart="-10dp"
+                    android:layout_marginBottom="-18dp"
                     app:cardBackgroundColor="@color/bg_opp"
                     app:cardCornerRadius="16dp">
 
@@ -73,6 +81,18 @@
                 android:gravity="center"
                 android:minHeight="92dp"
                 android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/itemEpisodeFiller"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="marquee"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="@string/filler"
+                    android:textAlignment="center"
+                    android:textStyle="italic"
+                    android:visibility="gone"
+                    app:lineHeight="15sp" />
 
                 <TextView
                     android:id="@+id/itemEpisodeTitle"
