--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,4 +8,5 @@
     <color name="nav_tab_disabled">#40ffffff</color>
     <color name="status">#801F1F1F</color>
     <color name="nav_status">#54000000</color>
+    <color name="filler">#17FF6B08</color>
 </resources>
