--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="button_icon">#A9FFFFFF</color>
     <color name="nav_status">#54FFFFFF</color>
     <color name="fav">#E63956</color>
+    <color name="filler">#3BFF8400</color>
 </resources>
