--- a/app/src/main/res/drawable/ic_round_source_24.xml
+++ b/app/src/main/res/drawable/ic_round_source_24.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M16.88,2.88L16.88,2.88c-0.49,-0.49 -1.28,-0.49 -1.77,0l-8.41,8.41c-0.39,0.39 -0.39,1.02 0,1.41l8.41,8.41c0.49,0.49 1.28,0.49 1.77,0l0,0c0.49,-0.49 0.49,-1.28 0,-1.77L9.54,12l7.35,-7.35C17.37,4.16 17.37,3.37 16.88,2.88z"/>
+      android:pathData="M20,6h-8l-1.41,-1.41C10.21,4.21 9.7,4 9.17,4H4C2.9,4 2.01,4.9 2.01,6L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V8C22,6.9 21.1,6 20,6zM14,16H6v-2h8V16zM18,12H6v-2h12V12z"/>
 </vector>
