--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,6 @@
         <item name="android:windowBackground">@color/bg</item>
         <item name="android:fontFamily">@font/poppins</item>
         <item name="android:textColor">@color/bg_black</item>
-
         <item name="shapeAppearanceLargeComponent">@style/ShapeAppearanceOverlay.Demo</item>
         <item name="android:ambientShadowAlpha">0.08</item>
         <item name="android:spotShadowAlpha">0.08</item>
@@ -36,13 +35,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.Saikou.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="Theme.Saikou.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.Saikou.AppBarOverlay" parent="Theme.Saikou" />
+    <style name="Theme.Saikou.PopupOverlay" parent="Theme.Saikou" />
 
-    <style name="Theme.Saikou.Exoplayer" parent="@style/Theme.AppCompat.NoActionBar">
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="android:statusBarColor">@android:color/black</item>
-        <item name="android:navigationBarColor">@android:color/black</item>
+    <style name="Theme.Saikou.Exoplayer" parent="@style/Theme.Saikou.NoActionBar">
+<!--        <item name="android:statusBarColor">@android:color/black</item>-->
+<!--        <item name="android:navigationBarColor">@android:color/black</item>-->
     </style>
 </resources>
