- Exoplayer Revamp (Part 3) - Fixed Theme - Removed fixed timer on top of MediaDetailsActivity.kt

--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -2,11 +2,13 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <View
         android:id="@+id/view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#000" />
+        android:background="#000"
+        tools:visibility="gone" />
 
     <com.google.android.exoplayer2.ui.AspectRatioFrameLayout android:id="@id/exo_content_frame"
         android:layout_width="match_parent"
@@ -51,6 +53,7 @@
             android:layout_height="1000dp"
             android:clickable="true"
             android:alpha="0"
+            tools:alpha="1"
             android:focusable="true"
             app:cardBackgroundColor="#80000000"
             app:cardCornerRadius="500dp"
@@ -72,6 +75,7 @@
             app:cardCornerRadius="500dp"
             android:layout_height="1000dp"
             android:alpha="0"
+            tools:alpha="1"
             android:clickable="true"
             android:focusable="true"
             app:cardBackgroundColor="#80000000"
@@ -174,6 +178,47 @@
                 tools:ignore="ContentDescription" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/exo_fast_rewind_anim"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_weight="1"
+            android:alpha="0"
+            android:fontFamily="@font/poppins_bold"
+            android:text="-10"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            app:drawableTopCompat="@drawable/anim_rewind"
+            android:layout_marginTop="16dp"
+            tools:ignore="HardcodedText,RtlCompat" />
+        <View
+            android:layout_width="128dp"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/exo_fast_forward_anim"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_weight="1"
+            android:alpha="0"
+            android:fontFamily="@font/poppins_bold"
+            android:text="10+"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            android:layout_marginTop="16dp"
+            app:drawableTopCompat="@drawable/anim_skip"
+            tools:ignore="HardcodedText,RtlCompat" />
+    </LinearLayout>
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@id/exo_buffering"
