--- a/app/src/main/res/layout/fragment_anime_source.xml
+++ b/app/src/main/res/layout/fragment_anime_source.xml
@@ -30,8 +30,32 @@
             android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingBottom="32dp"
+            android:layout_marginBottom="16dp"
             android:visibility="gone"
             tools:visibility="visible">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/mediaCountdownContainer"
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                android:layout_marginBottom="-16dp"
+                android:visibility="gone"
+                app:cardBackgroundColor="?attr/colorPrimary"
+                app:cardCornerRadius="0dp"
+                tools:visibility="visible">
+
+                <TextView
+                    android:id="@+id/mediaCountdown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:text="Next Episode will be released in \n00:00:00" />
+            </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
