--- a/app/src/main/res/layout/fragment_manga_source.xml
+++ b/app/src/main/res/layout/fragment_manga_source.xml
@@ -30,6 +30,7 @@
             android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingBottom="32dp"
+            android:layout_marginBottom="16dp"
             android:visibility="gone"
             tools:visibility="visible">
 
