--- a/app/src/main/res/layout/fragment_media_info.xml
+++ b/app/src/main/res/layout/fragment_media_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,10 +29,33 @@
             android:id="@+id/mediaInfoContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="48dp"
+            android:layout_marginBottom="64dp"
             android:orientation="vertical"
             android:visibility="gone"
             tools:visibility="visible">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/mediaCountdownContainer"
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                android:layout_marginBottom="-16dp"
+                android:visibility="gone"
+                app:cardBackgroundColor="?attr/colorPrimary"
+                app:cardCornerRadius="0dp"
+                tools:visibility="visible">
+
+                <TextView
+                    android:id="@+id/mediaCountdown"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:text="Next Episode will be released in \n00:00:00" />
+            </androidx.cardview.widget.CardView>
 
             <TableLayout
                 android:layout_width="match_parent"
