- Exoplayer Revamp Complete - Fix StreamSB again - fix Dialog Theme again - Bump to 1.0.9

--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -25,9 +25,11 @@
             android:id="@+id/mediaCollapsing"
             android:layout_width="match_parent"
             android:layout_height="192dp"
+            app:contentScrim="@color/nav_bg"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
-            app:layout_scrollFlags="scroll|snap">
+            app:layout_scrollFlags="scroll|snap"
+            app:titleCollapseMode="fade">
 
             <ImageView
                 android:id="@+id/mediaBanner"
