--- a/app/src/main/res/drawable/shape_corner_16dp.xml
+++ b/app/src/main/res/drawable/shape_corner_16dp.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/nav_bg"/>
-    <corners android:radius="16dp"/>
+    <solid android:color="?attr/colorSurface"/>
+    <corners android:radius="32dp"/>
 </shape>
