--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,7 +49,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:windowNoTitle">false</item>
         <item name="android:windowIsFloating">true</item>
-        <item name="background">@drawable/shape_corner_16dp</item>
+        <item name="android:windowBackground">@drawable/shape_corner_16dp</item>
     </style>
-
 </resources>
