- filler list - fixes

--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -73,6 +73,7 @@
             android:textSize="12sp"
             android:textStyle="italic"
             android:transitionName="mediaTitle"
+            tools:ignore="TextContrastCheck"
             tools:text="SOURCE " />
 
     </LinearLayout>
