--- a/app/src/main/res/layout/item_episode_list.xml
+++ b/app/src/main/res/layout/item_episode_list.xml
@@ -25,8 +25,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="-4dp"
+            android:clipToPadding="false"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingBottom="4dp">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -52,9 +55,8 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
                     android:layout_marginStart="-10dp"
-                    android:layout_marginBottom="-18dp"
+                    android:layout_marginTop="-18dp"
                     app:cardBackgroundColor="@color/bg_opp"
                     app:cardCornerRadius="16dp">
 
@@ -64,14 +66,37 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
                         android:layout_marginStart="16dp"
+                        android:layout_marginTop="19dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="16dp"
                         android:fontFamily="@font/poppins_bold"
                         android:textColor="@color/bg"
                         android:textSize="20sp"
                         tools:text="12" />
                 </androidx.cardview.widget.CardView>
 
+                <LinearLayout
+                    android:id="@+id/itemEpisodeProgressCont"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <View
+                        android:id="@+id/itemEpisodeProgress"
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="0"
+                        android:background="@color/pink_500" />
+
+                    <View
+                        android:id="@+id/itemEpisodeProgressEmpty"
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="#80FFFFFF" />
+
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
