--- a/app/src/main/res/layout/item_episode_compact.xml
+++ b/app/src/main/res/layout/item_episode_compact.xml
@@ -16,14 +16,14 @@
         <View
             android:id="@+id/itemEpisodeProgress"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="2dp"
             android:layout_weight="0"
             android:background="@color/pink_500" />
 
         <View
             android:id="@+id/itemEpisodeProgressEmpty"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="2dp"
             android:layout_weight="1" />
 
     </LinearLayout>
