--- a/app/src/main/res/layout/activity_studio.xml
+++ b/app/src/main/res/layout/activity_studio.xml
@@ -10,6 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
 
         android:layout_width="match_parent"
+        android:background="@color/nav_bg"
         android:layout_height="wrap_content">
 
         <TextView
