--- a/app/src/main/res/layout/exo_player_view.xml
+++ b/app/src/main/res/layout/exo_player_view.xml
@@ -38,7 +38,8 @@
             android:background="@color/exo_error_message_background_color"
             android:gravity="center"
             android:padding="16dp"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:ignore="PrivateResource" />
 
     </com.google.android.exoplayer2.ui.AspectRatioFrameLayout>
 
@@ -88,8 +89,9 @@
     <com.google.android.exoplayer2.ui.SubtitleView
         android:id="@id/exo_subtitles"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="8dp" />
+        android:layout_height="128dp"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="16dp" />
 
     <View android:id="@id/exo_controller_placeholder"
         android:layout_width="match_parent"
