--- a/app/src/main/res/layout/item_episode_grid.xml
+++ b/app/src/main/res/layout/item_episode_grid.xml
@@ -45,6 +45,17 @@
         android:textColor="@color/bg_white"
         android:textSize="48sp" />
 
+    <ImageView
+        android:id="@+id/itemEpisodeViewed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_margin="8dp"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_round_remove_red_eye_24"
+        app:tint="@color/bg_white"
+        tools:ignore="ContentDescription" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
