- fix bottom bar height - fix gogo search - 9anime crashes - fixed more crashes - fixed auto select once again - continue watching section now updates when you watch an episode - long pressing an anime/manga will now open list editor directly - fixed ghost cover image opening - fixed video player subtitles - fixed notch covering side bars in video player - refactor threading of the app entirely - and more things I cant remember at 4:20am

--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -229,15 +229,15 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/mediaTab"
         android:layout_width="match_parent"
-        android:layout_height="96dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@color/nav_bg"
         app:itemActiveIndicatorStyle="@style/BottomNavBar"
         app:itemIconTint="@color/tab_layout_icon"
-        app:itemTextColor="@color/tab_layout_text"
         app:itemRippleColor="?attr/colorSecondary"
         app:itemTextAppearanceActive="@style/NavBarText"
         app:itemTextAppearanceInactive="@style/NavBarText"
+        app:itemTextColor="@color/tab_layout_text"
         app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior" />
 
     <androidx.cardview.widget.CardView
