- Fixed #34 (Reload After App Resume) - Fixed #35 (Auto Update Progress not setting status to CURRENT) - auto scroll source response messages - auto scroll episode title in video player - improve Kitsu Accuracy - Default Theme of app set to Dark mode - Fixed notch slider for on video player (need testing again) - Added Tenshi Source - bump to 1.0.10.4

--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -275,6 +275,7 @@
                     android:singleLine="false"
                     android:textAllCaps="false"
                     android:textColor="@color/bg_white"
+                    android:visibility="gone"
                     tools:text="@string/anime" />
 
             </LinearLayout>
